fix spacing on pricing page

--- a/assets/sass/views/_default-page.scss
+++ b/assets/sass/views/_default-page.scss
@@ -97,3 +97,6 @@
         }
     }
 }
+.page-template-page-pricing .entry-content {
+    margin-top: 0px;
+}
